--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,13 +36,14 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-}
-
-  
+}  
 .bgimg{
-  background: url("{{url_for('static', filename='images/banner2.png')}}") no-repeat;
+  
+  background: url("static/images/banner2.png") no-repeat;
   background-size: cover;
   height:260px;
+
+      
 }
 
 .navbar-custom {
@@ -126,4 +127,35 @@ h2{
 .btn-start-now:hover {
   background: #9ebd20;
   text-decoration: none;
+}
+/*Receipe Search Cards*/
+.category-card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 150px;
+    border-radius: 4px;
+    text-align:center;
+    margin:5px;    
+}
+
+.category-card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+category-img {
+    border-radius: 5px 5px 0 0;
+}
+
+.category-container {
+    padding: 2px 16px;
+
+}
+
+@media only screen and (max-width: 600px) {
+    .category-card {
+        width: 100%;
+    }
+    .recent-added{
+         display:none;
+    }
 }
