--- a/templates/outside_search_result_detailed.html
+++ b/templates/outside_search_result_detailed.html
@@ -17,7 +17,10 @@
                   <p><strong>nutrition</strong><br />{{ recipes[0]["nutrition"] }}</p><br />
                   <p><strong>Known Allergies</strong><br />{{ recipes[0]["known_allergies"] }}</p><br />
                   
-                  <p>[<strong>Views: {{ recipes[0]["views"] }}</strong>] [<strong>Votes: {{ recipes[0]["votes"] }}</strong>]  [ <a href="OutVoteNow?id={{recipes[0]['recipe_id']}}&s={{ search }}"><strong>Vote Now</strong></a> ]</p>
+                  {% if country %}
+                  <p><strong>Author's Country Of Origin</strong><br />{{ country[0]['country'] }}</p><br />
+                  {% endif %}                  
+                  <p>[<strong>Views: {{ recipes[0]["views"] }}</strong>] [<strong>Up Votes: {{ recipes[0]["votes"] }}</strong>] [<strong>Down Votes: {{ recipes[0]["dislikes"] }}</strong>]  [ <a href="OutVoteNow?id={{recipes[0]['recipe_id']}}&s={{ search }}"><strong style="color:green;">Vote Up <i class="glyphicon glyphicon-thumbs-up"></i></strong></a> ]   [ <a href="OutDownVoteNow?id={{recipes[0]['recipe_id']}}&s={{ search }}"><strong style="color:red;">Vote Down <i class="glyphicon glyphicon-thumbs-down"></i></strong></a> ]</p>
                   
                   <p><a href="search_cat_get?s={{ search }}"><small><small><</small></small><small><</small>< Back </a></p>
                   
