--- a/templates/recipe_detailed_view.html
+++ b/templates/recipe_detailed_view.html
@@ -69,7 +69,7 @@
                         <tr>
                           <th scope="col">
                             <form id="back" name="back" method="GET" action="view_your_recipes">
-                              <button type="submit" class="btn btn-default"> Back </button>
+                              <button type="submit" class="btn btn-default"> << Back </button>
                             </form> 
                             </th>
                           <th scope="col">
