--- a/templates/dash_base.html
+++ b/templates/dash_base.html
@@ -166,69 +166,69 @@ nav.vertical {
   text-align: center;
 }
 
-  nav.vertical > ul {
-    list-style-type: none;
-  }
+nav.vertical > ul {
+  list-style-type: none;
+}
 
-    nav.vertical > ul > li {
-      display: block;
-    }
+nav.vertical > ul > li {
+    display: block;
+}
 
-      nav.vertical > ul > li > a {
-        background-color: rgb(157, 34, 60);
-        background-image: -webkit-linear-gradient(135deg, rgb(139,171,18), rgb(157, 34, 60));
-        background-image: -moz-linear-gradient(135deg, rgb(139,171,18), rgb(157, 34, 60));
-        background-image: -o-linear-gradient(135deg, rgb(139,171,18), rgb(157, 34, 60));
-        background-image: linear-gradient(135deg, rgb(139,171,18), rgb(157, 34, 60));
-        border-bottom: 1px solid rgba(255,255,255,.1);
-        box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 1px rgba(0,0,0,.1);
-        color: rgb(255,255,255);
-        display: block;
-        font-size: .2.1em;
-        font-weight: 500;
-        height: 50px;
-        letter-spacing: .5rem;
-        line-height: 50px;
-        text-shadow: 0 1px 1px rgba(0,0,0,.1);
-        text-transform: uppercase;
-        transition: all .1s ease;
-        text-decoration: none;
-      }
+nav.vertical > ul > li > a {
+    background-color: rgb(157, 34, 60);
+    background-image: -webkit-linear-gradient(135deg, rgb(139,171,18), rgb(157, 34, 60));
+    background-image: -moz-linear-gradient(135deg, rgb(139,171,18), rgb(157, 34, 60));
+    background-image: -o-linear-gradient(135deg, rgb(139,171,18), rgb(157, 34, 60));
+    background-image: linear-gradient(135deg, rgb(139,171,18), rgb(157, 34, 60));
+    border-bottom: 1px solid rgba(255,255,255,.1);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 1px rgba(0,0,0,.1);
+    color: rgb(255,255,255);
+    display: block;
+    font-size: .2.1em;
+    font-weight: 500;
+    height: 50px;
+    letter-spacing: .5rem;
+    line-height: 50px;
+    text-shadow: 0 1px 1px rgba(0,0,0,.1);
+    text-transform: uppercase;
+    transition: all .1s ease;
+    text-decoration: none;
+}
 
-        nav.vertical > ul > li > a:hover {
-         background-color: rgb(139,171,18);
-         background-image: -webkit-linear-gradient(150deg, rgb(139,171,18), rgb(139,171,18));
-         background-image: -moz-linear-gradient(150deg, rgb(139,171,18), rgb(139,171,18));
-         background-image: -o-linear-gradient(150deg, rgb(139,171,18), rgb(139,171,18));
-         background-image: linear-gradient(150deg, rgb(139,171,18), rgb(139,171,18)); 
-         cursor: pointer;
-        }
+nav.vertical > ul > li > a:hover {
+     background-color: rgb(139,171,18);
+     background-image: -webkit-linear-gradient(150deg, rgb(139,171,18), rgb(139,171,18));
+     background-image: -moz-linear-gradient(150deg, rgb(139,171,18), rgb(139,171,18));
+     background-image: -o-linear-gradient(150deg, rgb(139,171,18), rgb(139,171,18));
+     background-image: linear-gradient(150deg, rgb(139,171,18), rgb(139,171,18)); 
+     cursor: pointer;
+}
         
-          nav.vertical > ul > li > div {
-            background-color: rgb(255,255,255);
-            background-color: #8BAB12;
-          }
+nav.vertical > ul > li > div {
+      background-color: rgb(255,255,255);
+      background-color: #8BAB12;
+}
  
-          nav.vertical > ul > li > div > ul {
-            list-style-type: none;
-          }
+nav.vertical > ul > li > div > ul {
+      list-style-type: none;
+}
 
-            nav.vertical > ul > li > div > ul > li > a {
-             background-color: rgb(255,255,255);
-             border-bottom: 1px solid rgba(0,0,0,.05);
-             color: #333331;
-             display: block;
-             font-size: 1.2rem;
-             padding: 10px 0;
-             text-decoration: none;
-             transition: all 0.15s linear;
-            }
+nav.vertical > ul > li > div > ul > li > a {
+      background-color: rgb(255,255,255);
+      border-bottom: 1px solid rgba(0,0,0,.05);
+      color: #333331;
+      display: block;
+      font-size: 1.2rem;
+      padding: 10px 0;
+      text-decoration: none;
+      transition: all 0.15s linear;
+}
 
-              nav.vertical > ul > li > div > ul > li:hover > a {
-                background-color: #D0EADD;
-                color: grey;
-                padding: 10px 0 10px 50px;
-              }
+nav.vertical > ul > li > div > ul > li:hover > a {
+      background-color: #D0EADD;
+      color: grey;
+      padding: 10px 0 10px 50px;
+}
 
 /*Receipe Search Cards*/
 .category-card {
@@ -250,9 +250,26 @@ category-img {
 
 .category-container {
     padding: 2px 16px;
+}
+
+#hamburger{
+   display: none;
+}
+    
+@media only screen and (max-width: 600px) {
+    .category-card {
+        width: 100%;
+    }
+    .recent-added{
+         display:none;
+    }
+    #hamburger{
+      display: block;
+    }
+}
 
 </style> 
-  </head>
+</head>
  
   <body>
     <!-- Navigation -->
@@ -260,12 +277,13 @@ category-img {
     <header class="navbar navbar-inverse navbar-custom ">
       <div class="container">
           <div class="bgimg">
-            <div class="navbar-header">
-                <a class="logo-style" href="/dashboard">Online Cook-book</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>          
+            <div class="navbar navbar-header navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
+                <a class="logo-style" href="/"><img src="{{url_for('static', filename='images/radish_logo.png')}}" alt="Logo" style="width:35px;height:35px;padding:0;"></img>Online Cook Book</a>
+                <button style="background-color:#8BAB12;" class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" id="hamburger" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                   Menu
+                  <i class="glyphicon glyphicon-menu-hamburger"></i>
+                </button>
+                
             </div>
             <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="nav navbar-right menu-links">
@@ -321,7 +339,7 @@ category-img {
     <!-- Footer -->
     <footer class="site-footer">
         <div class="container">
-            <p class="m-0 text-center text-white">Online Cook-Book 2018</p>
+            <p class="m-0 text-center text-white"><img src="{{url_for('static', filename='images/radish_logo.png')}}" alt="Logo" style="width:20px;height:20px;padding:2px;"></img>Online Cook-Book 2018</p>
         </div>
         <!-- /.container -->
     </footer>
